--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site wide configuration
 
-title: Site Title
-locale: en_US
-description: Describe your website here.
+title: DBA@Robin's Blog-Focus on database.
+locale: zh_CN
+description: Above all, don't lose hope.
 logo: site-logo.png
 search: true
-url: 
-
+url: https://dbarobin.github.io
+timezone:    Asia/Chongqing
 
 # Jekyll configuration
 
@@ -29,25 +29,35 @@ kramdown:
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor"]
 
+# For external links add external: true
+links:
+  - title: About
+    url: /about/
+  - title: tags
+    url: /tags/
+  - title: Articles
+    url: /articles/
+  - title: MySQL
+    url: /mysql/
+  - title: Linux
+    url: /linux/
+  - title: Python
+    url: /python/
+  - title: other
+    url: /other/
 
 # Site owner
 owner:
-  name: Your Name
+  name: Robin Wen
   avatar: bio-photo.jpg
-  email: you@email.com
-  disqus-shortname:
-  twitter: #username
-  facebook: #username
-  github: #username
-  stackexchange: #http://stackoverflow.com/users/123456/username
-  linkedin: #username
-  instagram: #username
-  flickr: #username
-  tumblr: #username
-  google:
-    plus: #username
-    analytics:
-    verify:
-    ad-client:
-    ad-slot: 
-  bing-verify:
+  email: dbarobinwen@gmail.com
+  disqus_shortname: dbarobin
+  github: dbarobin
+  twitter: dbarobin
+  facebook: dbarobin
+
+# Analytics and webmaster tools stuff goes here
+analytics :
+  provider : google
+  google :
+      tracking_id : 'UA-57297247-1'
