update config file

--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,12 @@ gems:
   - jekyll-sitemap
 
 kramdown:
+  input: GFM
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..2
+  smart_quotes:  lsquo,rsquo,ldquo,rdquo
   use_coderay: false
 
 include: [".htaccess"]
