--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,6 @@ url: https://dbarobin.github.io
 timezone: Asia/Chongqing
 
 # Jekyll configuration
-
 permalink: /:categories/:title/
 markdown: kramdown
 highlighter: pygments
@@ -18,6 +17,10 @@ sass:
   style: compressed
 gems:
   - jekyll-sitemap
+
+# Read Time is a CALCULATOR to provide post Estimated Reading Time (ERT) based on word count. Usage is recommended.
+readtime: true
+wpm: 200
 
 kramdown:
   input: GFM
