--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ locale: zh_CN
 description: Above all, don't lose hope.
 logo: site-logo.png
 search: true
-url: https://dbarobin.com
+url: http://dbarobin.com
 timezone: Asia/Chongqing
 
 # Jekyll configuration
