--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ timezone: Asia/Chongqing
 # Jekyll configuration
 permalink: /:categories/:title/
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
