--- a/_config.yml
+++ b/_config.yml
@@ -61,3 +61,13 @@ permalink: /:categories/:title/
 markdown: kramdown
 highlighter: pygments
 paginate: 5
+
+### Kramdown settings.
+kramdown:
+  input: GFM 
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  use_coderay: false
