[Optimize] Update configuration of site - Add keywords for site

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline: Focus on database.
 author: Robin Wen
 email: dbarobinwen@gmail.com 
 description: Above all, don't lose hope.
-keywords: "MySQL, Linux, Python, Reading"
+keywords: "MySQL, Linux, Python, Reading, DBA"
 url: "http://dbarobin.com" # the base hostname & protocol for your site
 
 ### Personal info and site tools info:
