[Optimize] Update avatar

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  dbarobin
 disqus_shortname: dbarobin
 favicon:     "/images/favicon.ico"
 aboutme: Robin Wen, MySQL DBA.
-aboutme_photo: "/images/bio-photo.jpg"
+aboutme_photo: "/images/wentasy.png"
 google_analytics_key: UA-57297247-1
 
 ### Site setting:
