--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-### Site info:
+### Site info.
 title: DBA@Robin
 tagline: Focus on database.
 author: Robin Wen
 email: dbarobinwen@gmail.com 
-description: Above all, don't lose hope.
-keywords: "MySQL, Linux, Python, Reading, DBA"
-url: "http://dbarobin.com" # the base hostname & protocol for your site
+description: Robin Wen, MySQL DBA, Liberalist. Record every step about my fighting. Above all, do not lose hope.
+keywords: "MySQL, Linux, Python, Reading, DBA, Muisc, 阅读, 音乐, 钢琴, 文学"
+url: "http://dbarobin.com" # The base hostname & protocol for your site
 
-### Personal info and site tools info:
+### Personal info and site tools info.
 twitter_username: dbarobin
 github_username:  dbarobin
 disqus_shortname: dbarobin
@@ -16,10 +16,10 @@ aboutme: Robin Wen, MySQL DBA.
 aboutme_photo: "/images/wentasy.png"
 google_analytics_key: UA-57297247-1
 
-### Site setting:
-ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
-default_column: "two" # blog style: two columns, if default_column != "two", you will see a one column blog.
-default_locale: "en" # blog sidebar language set, only include: English(en) and Chinese (cn)
+### Site setting.
+ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True.
+default_column: "two" # Blog style: two columns, if default_column != "two", you will see a one column blog.
+default_locale: "en" # Blog sidebar language set, only include: English(en) and Chinese (cn).
 
 locales:
     en:
@@ -50,13 +50,13 @@ locales:
       PostDate: "| 发表时间: "
 
 
-### your Blogroll info, only name can shown on the page.
+### Blogroll info, only name can shown on the page.
 Blogroll:
     - name: DBA@DevOps
       href: http://blog.csdn.net/dba_waterbin
       title: DBA@DevOps
 
-### Build settings
+### Build settings.
 permalink: /:categories/:title/
 markdown: kramdown
 highlighter: pygments
