[Configuration] Add hard_wrap at _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,7 @@ paginate: 5
 ### Kramdown settings.
 kramdown:
   input: GFM 
+  hard_wrap: true
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
