--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ locales:
       Categories: "Categories"
       Copyright_Notice: "Copyright Notice"
       Recent_Posts: "Recent Posts"
-      Search: "Search"
+      Google_Search: "Google Search"
       Tags: "Tags"
       Previous: "Older"
       Next: "Newer"
@@ -44,7 +44,7 @@ locales:
       Categories: "分类目录"    
       Copyright_Notice: "版权声明"
       Recent_Posts: "近期文章"
-      Search: "搜索"
+      Google_Search: "搜索"
       Tags: "标签" 
       Previous: "前一页"
       Next: "后一页"
