[Page] Update site tagline, fix typo

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### Site info.
 title: DBA@Robin
-tagline: Focus on database.
+tagline: Focus on Database.
 author: Robin Wen
 email: dbarobinwen@gmail.com 
 description: Robin Wen, MySQL DBA, Liberalist. Record every step about my fighting. Above all, do not lose hope.
