[Config] Change site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 ### Site info.
-title: DBA@Robin
-tagline: Focus on Database.
+title: 太阳照常升起
+tagline: 万物之中，希望至美；至美之物，永不凋零。
 author: Robin Wen
 email: dbarobinwen@gmail.com 
-description: Robin Wen, MySQL DBA, Liberalist. Record every step about my fighting. Above all, do not lose hope.
+description: Robin Wen, Liberalist. Record every step about my fighting. Above all, do not lose hope.
 keywords: "MySQL, Linux, Python, Reading, DBA, Muisc, 阅读, 音乐, 钢琴, 文学"
 url: "http://dbarobin.com" # The base hostname & protocol for your site
 locale: en_US
