--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ twitter_username: dbarobin
 github_username:  dbarobin
 disqus_shortname: dbarobin
 favicon:     "/images/favicon.ico"
-aboutme: Robin Wen, MySQL DBA.
+aboutme: Robin Wen, Quest for Truth.
 aboutme_photo: "/images/wentasy.png"
 google_analytics_key: UA-57297247-1
 
