--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ google_analytics_key: UA-57297247-1
 ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown when ShowContactInfo == True.
 default_column: "two" # Blog style: two columns, if default_column != "two", you will see a one column blog.
 default_locale: "en" # Blog sidebar language set, only include: English(en) and Chinese (cn).
+path: "/_data/comments" # Path which stored comments etc.
 
 locales:
     en:
