--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ locales:
       PostedInCategories: "Posted in"
       Taggedwith: "and tagged"  
       PostDate: "on "
-      WechatDBTalk: "WeChat Official"
+      WechatDBTalk: "Official WeChat"
       WechatDonate: "Donate"
     cn:
       Aboutme: "关于我"
