[Theme] Add gems plugin to configure file

--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,7 @@ Blogroll:
 permalink: /:year/:month/:day/:title/
 markdown: kramdown
 highlighter: rouge
+gems: [jekyll-paginate]
 paginate: 5
 excerpt_separator: <!--more-->
 
