[Blogroll] Update url of taosay and add kenengba

--- a/_config.yml
+++ b/_config.yml
@@ -106,11 +106,14 @@ Blogroll:
       href: http://macshuo.com
       title: MacTalk
     - name: Taosay
-      href: http://www1.taosay.net
+      href: https://zhuanlan.zhihu.com/taosay
       title: Taosay
     - name: Yurii
       href: http://www.luanxiang.org/blog
       title: Yurii
+    - name: KeNengBa
+      href: https://kenengba.com
+      title: KeNengBa
     - name: X7
       href: http://blog.csdn.net/dba_waterbin
       title: X7
