--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline: 万物之中，希望至美；至美之物，永不凋零。
 author: Robin Wen
 email: dbarobinwen@gmail.com
 description: 温国兵, 自由主义者，区块链爱好者和布道者，「区块链技术指北」作者。热爱 Google，热爱互联网，热爱科技。推崇逻辑和理性，用数据说话，用理工科思维理解世界。这个站点是我求真思考的场所，希望对您有用。本站基于 GitHub Pages，域名买自 GoDaddy，后续做了不少优化。如您所知，本人发布的文章与评论内容仅代表本人观点。「万物之中，希望至美；至美之物，永不凋零。」
-keywords: "Reading, Muisc, 阅读, 音乐, 钢琴, 文学, 互联网, 科技"
+keywords: "Reading, Muisc, 阅读, 音乐, 钢琴, 文学, 互联网, 科技, 区块链, Blockchain, 比特币, Bitcoin, 加密货币, Cryptocurrency"
 # url: "http://dbarobin.com" # The base hostname & protocol for your site
 url: "https://dbarobin.com" # The base hostname & protocol for your site
 enforce_ssl: "dbarobin.com" # The base hostname & protocol for your site
