[Page] Update twitter name

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale: en_US
 encoding: UTF-8
 
 ### Personal info and site tools info.
-twitter_username: robinwenio
+twitter_username: vrwio
 github_username:  dbarobin
 # disqus_shortname: dbarobin
 favicon:     "/images/favicon.ico"
