[Theme] Change about me

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ twitter_username: vrwio
 github_username:  dbarobin
 # disqus_shortname: dbarobin
 favicon:     "/images/favicon.ico"
-aboutme: Robin Wen, Quest for Truth.
+aboutme: Robin Wen, SuperONE COO.
 aboutme_photo: "/images/wentasy.png"
 google_analytics_key: UA-57297247-1
 
