[Theme] Change config

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ locales:
       WechatDonate: "Donate"
     cn:
       Aboutme: "关于我"
-      Archives: "存档"
+      Archives: "归档"
       Blogroll: "Blogroll"
       Categories: "分类目录"
       Copyright_Notice: "版权声明"
