[Theme] Change config

--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ locales:
       Recent_Posts: "近期文章"
       Google_Search: "搜索"
       Tags: "标签"
-      Previous: "前一页"
-      Next: "后一页"
+      Previous: "后一页"
+      Next: "前一页"
       PostedInCategories: "目录:"
       Taggedwith: "| 标签:"
       PostDate: "| 发表时间: "
