[Theme] Update sidebar, change github to telegram

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ encoding: UTF-8
 ### Personal info and site tools info.
 twitter_username: vrwio
 github_username:  dbarobin
+telegram_name: robinwen
 # disqus_shortname: dbarobin
 favicon:     "/images/favicon.ico"
 aboutme: Robin Wen, Hacker.
