[Theme] change Blogroll to CN

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ locales:
     cn:
       Aboutme: "关于我"
       Archives: "归档"
-      Blogroll: "Blogroll"
+      Blogroll: "友链"
       Categories: "分类目录"
       Copyright_Notice: "版权声明"
       Recent_Posts: "近期文章"
