--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Cryptospace"
 tagline: 万物之中，希望至美；至美之物，永不凋零。
 author: Robin Wen
 email: blockxyz@gmail.com
-description: 自由主义者，区块链爱好者和布道者，「区块链技术指北」作者。热爱 Google，热爱互联网，热爱科技。推崇逻辑和理性，用数据说话，用理工科思维理解世界。这个站点是我求真思考的场所，希望对您有用。本站基于 GitHub Pages，域名买自 GoDaddy，后续做了不少优化。如您所知，本人发布的文章与评论内容仅代表本人观点。「万物之中，希望至美；至美之物，永不凋零。」
+description: 自由主义者，区块链从业者，ChainONE 社区发起人，「币安说」主理人，dbarobin.com 博主，隐私极客。如您所知，本人发布的文章与评论内容仅代表本人观点。「万物之中，希望至美；至美之物，永不凋零。」
 keywords: "互联网,科技,区块链,Blockchain,加密货币,Cryptocurrency,比特币,Bitcoin,以太坊,Ethereum,门罗币,Monero,区块链资产交易平台,币币交易,数字货币交易网,虚拟货币账户,比特币交易系统,以太坊行情,莱特币走势,BNB,赵长鹏,BTC价格,ETH钱包注册,LTC市价,币安,杠杆期货,Binance"
 # url: "https://dbarobin.com" # The base hostname & protocol for your site
 url: "https://dbarobin.com" # The base hostname & protocol for your site
