[Theme] Update About Me

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ github_username:  dbarobin
 telegram_name: robinwen
 # disqus_shortname: dbarobin
 favicon:     "/images/favicon.ico"
-aboutme: Robin Wen, Hacker.
+aboutme: Hi, I'm Robin Wen.
 aboutme_photo: "/images/wentasy.png"
 google_analytics_key: UA-57297247-1
 
