[Theme] Fix typo

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ locales:
       WechatDBTalk: "Official WeChat"
       WechatDonate: "Donate"
     cn:
-      Aboutme: "关于我"
+      Aboutme: "关于"
       Archives: "归档"
       Blogroll: "友链"
       Categories: "分类目录"
