[Theme] Remove Recent Posts

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ locales:
       Aboutme: "关于"
       Archives: "归档"
       Blogroll: "友链"
-      Categories: "分类目录"
+      Categories: "目录"
       Copyright_Notice: "版权声明"
       Recent_Posts: "近期文章"
       Google_Search: "搜索"
